add img and style

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,3 +1,39 @@
-.testing {
-  width: percentage(5/7);
+body{
+	-webkit-font-smoothing: antialiased;
+}
+
+.menu{
+	display: flex;
+	list-style-type: none;
+	align-items: center;
+	padding: 0 4vw;
+	height: 70px;
+	font-family: 'Noto Sans', sans-serif;
+	font-size: 18px;
+	position:fixed;
+	background-color: white;
+	width: 100vw;
+	top: 0;
+	margin: 0;
+	box-sizing: border-box;
+
+	.logo{
+		height: 50px;
+		flex:1;
+	}
+	li{
+		margin-right: 20px;
+		a{
+			text-decoration: none;
+			color: #4c4c4c;
+			&:hover{
+				color: black;
+			}
+		}
+	}
+}
+.full_image{
+	width: 100vw;
+	height: 100vh;
+	object-fit: cover;
 }
