--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,2 +1,32 @@
-.testing {
-  width: 71.42857%; }
+body {
+  -webkit-font-smoothing: antialiased; }
+
+.menu {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  padding: 0 4vw;
+  height: 70px;
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 18px;
+  position: fixed;
+  background-color: white;
+  width: 100vw;
+  top: 0;
+  margin: 0;
+  box-sizing: border-box; }
+  .menu .logo {
+    height: 50px;
+    flex: 1; }
+  .menu li {
+    margin-right: 20px; }
+    .menu li a {
+      text-decoration: none;
+      color: #4c4c4c; }
+      .menu li a:hover {
+        color: black; }
+
+.full_image {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover; }
