--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,32 +1,44 @@
 body {
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+  background: #d8d8d8;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  height: 100%;
+  padding: 0;
+  margin: 0; }
 
-.menu {
-  display: flex;
-  list-style-type: none;
-  align-items: center;
-  padding: 0 4vw;
-  height: 70px;
-  font-family: 'Noto Sans', sans-serif;
-  font-size: 18px;
-  position: fixed;
-  background-color: white;
-  width: 100vw;
-  top: 0;
-  margin: 0;
-  box-sizing: border-box; }
-  .menu .logo {
-    height: 50px;
-    flex: 1; }
-  .menu li {
-    margin-right: 20px; }
-    .menu li a {
-      text-decoration: none;
-      color: #4c4c4c; }
-      .menu li a:hover {
-        color: black; }
+.l-frame {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  box-sizing: content-box;
+  background: #fff;
+  padding: 0 16px;
+  overflow: hidden; }
+  .l-frame .header {
+    left: auto;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    max-width: 1280px;
+    padding: 34px 6vw;
+    display: flex;
+    align-items: center;
+    padding: 0 4vw;
+    height: 80px;
+    font-size: 18px;
+    box-sizing: border-box; }
+    .l-frame .header .logo {
+      flex: 1; }
+      .l-frame .header .logo img {
+        width: 130px; }
+    .l-frame .header .menu_item {
+      margin-right: 40px; }
+      .l-frame .header .menu_item a {
+        text-decoration: none;
+        color: #4c4c4c; }
+        .l-frame .header .menu_item a:hover {
+          color: black; }
 
 .full_image {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   object-fit: cover; }
