--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,39 +1,53 @@
 body{
 	-webkit-font-smoothing: antialiased;
+  background: #d8d8d8;
+	font-family: 'Roboto', sans-serif;
+	font-weight:100;
+	height: 100%;
+  padding: 0;
+  margin: 0;
 }
-
-.menu{
-	display: flex;
-	list-style-type: none;
-	align-items: center;
-	padding: 0 4vw;
-	height: 70px;
-	font-family: 'Noto Sans', sans-serif;
-	font-size: 18px;
-	position:fixed;
-	background-color: white;
-	width: 100vw;
-	top: 0;
-	margin: 0;
-	box-sizing: border-box;
-
-	.logo{
-		height: 50px;
-		flex:1;
-	}
-	li{
-		margin-right: 20px;
-		a{
-			text-decoration: none;
-			color: #4c4c4c;
-			&:hover{
-				color: black;
+.l-frame{
+		width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    box-sizing: content-box;
+    background: #fff;
+		padding: 0 16px;
+    overflow: hidden;
+	.header{
+		left: auto;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    max-width: 1280px;
+    padding: 34px 6vw;
+		display: flex;
+		align-items: center;
+		padding: 0 4vw;
+		height: 80px;
+		font-size: 18px;
+		box-sizing: border-box;
+		.logo{
+			flex:1;
+			img{
+				width:130px;
 			}
 		}
+		.menu_item{
+			margin-right: 40px;
+			a{
+				text-decoration: none;
+				color: #4c4c4c;
+				&:hover{
+					color: black;
+				}
+			}
+		}
+
 	}
 }
+
 .full_image{
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
 	object-fit: cover;
 }
