--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,3 +1,9 @@
+html {
+  font-size: 14px; }
+  @media (min-width: 1281px) {
+    html {
+      font-size: 15px; } }
+
 body {
   -webkit-font-smoothing: antialiased;
   background: #d8d8d8;
@@ -7,8 +13,37 @@ body {
   padding: 0;
   margin: 0; }
 
+.font-navy {
+  color: #87AD2F; }
+
+.small_font {
+  font-size: 0.8rem;
+  vertical-align: super; }
+
+.has-line {
+  border-bottom: 1px dashed #d3d3d3; }
+
+.is-center {
+  display: flex;
+  align-items: center; }
+
+.is-column {
+  display: flex;
+  flex-direction: column; }
+
+.is-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
+
+.space-between {
+  justify-content: space-between; }
+
+.space-around {
+  justify-content: space-around; }
+
 .l-frame {
-  width: 100%;
+  width: 92%;
   max-width: 1280px;
   margin: 0 auto;
   box-sizing: content-box;
@@ -18,27 +53,93 @@ body {
   .l-frame .header {
     left: auto;
     -webkit-box-pack: justify;
-    justify-content: space-between;
     max-width: 1280px;
     padding: 34px 6vw;
     display: flex;
     align-items: center;
     padding: 0 4vw;
-    height: 80px;
     font-size: 18px;
-    box-sizing: border-box; }
-    .l-frame .header .logo {
-      flex: 1; }
-      .l-frame .header .logo img {
-        width: 130px; }
+    box-sizing: border-box;
+    justify-content: center;
+    height: 190px; }
+    @media (min-width: 1281px) {
+      .l-frame .header {
+        height: 120px;
+        justify-content: space-between; } }
+    @media (min-width: 1281px) {
+      .l-frame .header .logo {
+        flex: 1; } }
+    .l-frame .header .logo img {
+      width: 200px; }
+      @media (min-width: 1281px) {
+        .l-frame .header .logo img {
+          width: 130px; } }
     .l-frame .header .menu_item {
-      margin-right: 40px; }
-      .l-frame .header .menu_item a {
-        text-decoration: none;
-        color: #4c4c4c; }
-        .l-frame .header .menu_item a:hover {
-          color: black; }
-
-.full_image {
-  width: 100%;
-  object-fit: cover; }
+      display: none; }
+      @media (min-width: 1281px) {
+        .l-frame .header .menu_item {
+          display: block;
+          margin-right: 40px; }
+          .l-frame .header .menu_item a {
+            text-decoration: none;
+            color: #4c4c4c; }
+            .l-frame .header .menu_item a:hover {
+              color: black; } }
+  .l-frame .full_image {
+    width: 100%;
+    object-fit: cover; }
+  .l-frame .big_title {
+    font-size: 2.4rem;
+    margin-top: 80px; }
+  .l-frame .price_cont {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 0; }
+    @media (min-width: 1281px) {
+      .l-frame .price_cont {
+        flex-direction: row;
+        margin-top: 60px; } }
+    .l-frame .price_cont.align-center {
+      align-items: center; }
+    .l-frame .price_cont.align-baseline {
+      align-items: baseline; }
+    .l-frame .price_cont .service {
+      width: 100%;
+      margin-bottom: 40px; }
+      @media (min-width: 1281px) {
+        .l-frame .price_cont .service {
+          width: 40%;
+          margin-bottom: 0px; } }
+      .l-frame .price_cont .service p {
+        font-size: 1rem; }
+        .l-frame .price_cont .service p .small-mobile {
+          font-size: 0.8rem; }
+      .l-frame .price_cont .service h2 {
+        font-size: 1.4rem; }
+        .l-frame .price_cont .service h2 .japaneseTitle {
+          font-size: 1.2rem; }
+    .l-frame .price_cont .obs {
+      width: 100%;
+      background-color: #f3f3f3;
+      padding: 18px 28px;
+      box-sizing: border-box;
+      margin-top: 20px; }
+      @media (min-width: 1281px) {
+        .l-frame .price_cont .obs {
+          width: 40%;
+          margin-top: 0; } }
+      .l-frame .price_cont .obs ul {
+        padding: 0;
+        font-size: 0.9rem; }
+        .l-frame .price_cont .obs ul li {
+          margin-bottom: 10px;
+          list-style-type: none;
+          color: black;
+          margin-bottom: 30px; }
+          .l-frame .price_cont .obs ul li:last-child {
+            margin-bottom: 0; }
+  .l-frame #access .address_cont {
+    align-items: flex-start; }
+    .l-frame #access .address_cont .address {
+      margin-right: 80px; }
