--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -7,20 +7,22 @@ html{
 
 body{
 	-webkit-font-smoothing: antialiased;
+	font-family: 'Noto Sans JP', sans-serif;
   background: #d8d8d8;
-	font-family: 'Roboto', sans-serif;
-	font-weight:100;
+	font-weight:400;
 	height: 100%;
   padding: 0;
   margin: 0;
 }
 
-.font-navy{
-	color: #87AD2F;
+.subtitle{
+	color:#4c4c4c;
 }
+
 .small_font{
 	font-size: 0.8rem;
 	vertical-align: super;
+	color: #AC2424;
 }
 
 .has-line{
@@ -51,6 +53,10 @@ body{
 	justify-content: space-around;
 }
 
+.space-evenly{
+	justify-content: space-evenly;
+}
+
 .l-frame{
 		width: 100%;
     max-width: 1280px;
@@ -59,6 +65,7 @@ body{
     background: #fff;
 		padding: 0 16px;
     overflow: hidden;
+		position: relative;
 	.header{
 		left: auto;
     -webkit-box-pack: justify;
@@ -111,27 +118,45 @@ body{
 	}
 
 	.big_title{
-		font-size: 2.4rem;
-		margin-top: 80px;
+		font-size: 3.4rem;
+		margin-top: 100px;
+		margin-bottom: 70px;
+		font-weight: 100;
+		color: #4c4c4c;
+		&.green{
+			color: #87AD2F;
+		}
+		&.blue{
+			color: #29356A;
+		}
+		&.pink{
+			color:#9F456F;
+		}
+		&.red{
+			color: #AC2424;
+		}
+
+	}
+	#price, #access{
+		width: 85%;
+		margin: 0 auto;
+		@media (min-width: 1281px) {
+			width: 100%;
+		}
 	}
 
 	.price_cont{
-		width: 90%;
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 		margin-top: 0;
 		@media (min-width: 1281px) {
 			flex-direction: row;
-			margin-top: 60px;
+			justify-content: space-evenly;
 		}
 
-		&.align-center{
-		  align-items: center;
-		}
+		align-items: center;
 
-		&.align-baseline{
-		  align-items: baseline;
-		}
 
 
 		.service{
@@ -165,6 +190,7 @@ body{
 				width: 40%;
 				margin-top: 0;
 			}
+
 			ul{
 				padding: 0;
 				font-size: 0.9rem;
@@ -173,10 +199,16 @@ body{
 					margin-bottom: 10px;
 					list-style-type:none;
 					color:black;
+					font-size: 0.9rem;
 					margin-bottom: 30px;
+
 					&:last-child{
 						margin-bottom: 0;
 					}
+					.is-red{
+						color: #AC2424;
+					}
+
 				}
 			}
 		}
@@ -187,10 +219,43 @@ body{
 			flex-direction: column;
 			@media (min-width: 1281px) {
 				flex-direction: row;
+				width: 100%;
+				justify-content: space-evenly;
 			}
-			.address{
-				margin-right: 80px;
+			.iframe{
+				width: 100%;
+				height: 500px;
+				@media (min-width: 1281px) {
+					width: 50%;
+					height: 300px;
+				}
+
 			}
 		}
+	}
+
+	#schedule{
+    padding: 0;
+		@media (min-width: 1281px) {
+			padding: 0 6vw;
+		}
+		.iframe{
+
+		}
+	}
+
+	#instagram{
+		width: 100%;
+    margin: 0 auto;
+		@media (min-width: 1281px) {
+			width: 90%;
+		}
+	}
+
+	.footer{
+		margin: 0 auto;
+		text-align: center;
+		margin: 100px 0 20px 0;
+
 	}
 }
