--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,8 +1,5 @@
 html{
-	font-size: 37px;
-	@media (min-width: 1024px) {
-		font-size: 15px;
-	}
+	font-size: 15px;
 }
 
 
@@ -14,6 +11,9 @@ body{
 	height: 100%;
   padding: 0;
   margin: 0;
+}
+p, li{
+	font-size: 1.2rem;
 }
 
 .subtitle{
@@ -59,12 +59,14 @@ body{
 }
 
 .l-frame{
-		width: 100%;
+		width: 100vw;
     max-width: 1280px;
     margin: 0 auto;
     box-sizing: content-box;
     background: #fff;
-		padding: 0 16px;
+		@media (min-width: 1024px) {
+			padding: 0 16px;
+		}
     overflow: hidden;
 		position: relative;
 	.header{
@@ -152,6 +154,7 @@ body{
 		flex-direction: column;
 		margin-top: 0;
 		@media (min-width: 1024px) {
+			margin-bottom: 70px;
 			flex-direction: row;
 			justify-content: space-evenly;
 		}
@@ -173,7 +176,6 @@ body{
 				margin-bottom: 0px;
 			}
 			p{
-				font-size: 1rem;
 				.small-mobile{
 					font-size: 0.8rem;
 				}
@@ -206,12 +208,7 @@ body{
 					list-style-type:none;
 					color:black;
 					margin-bottom: 30px;
-			    font-size: 0.62rem;
 					line-height: 1.5rem;
-					@media (min-width: 1024px) {
-						font-size: 0.9rem;
-					}
-
 					&:last-child{
 						margin-bottom: 0;
 					}
@@ -239,12 +236,14 @@ body{
 			@media (min-width: 1024px) {
 				flex-direction: row;
 				width: 100%;
-				justify-content: space-evenly;
+				justify-content: center;
 				.address{
 					margin: 0;
 					line-height: 29px;
-					font-size: 1.2rem;
 					font-weight: 300;
+					@media (min-width: 1024px) {
+						margin-right: 80px;
+					}
 				}
 			}
 
@@ -252,7 +251,7 @@ body{
 				width: 100%;
 				height: 500px;
 				@media (min-width: 1024px) {
-					width: 60%;
+					width: 30%;
 					height: 300px;
 				}
 
@@ -292,12 +291,16 @@ body{
 			.infos{
 				margin: 0 auto;
 				width: 80%;
-				margin-left: 90px;
+
+				@media (min-width: 1024px) {
+					margin-left: 90px;
+				}
 				> p{
-					font-size: 0.7rem;
-					line-height: 70px;
+
+					line-height: 33px;
+					width: 90%;
+
 					@media (min-width: 1024px) {
-						font-size: 1.1rem;
     				line-height: 39.8px;
 					}
 				}
@@ -312,7 +315,7 @@ body{
 					display: flex;
 					flex-direction: row;
 					text-decoration: none;
-					justify-content: space-between;
+					justify-content: space-around;
 					align-items: center;
 					color: #6DC02E;
 					padding: 0 30px;
@@ -320,21 +323,17 @@ body{
 					margin-top: 10px;
 					position: relative;
 					border-radius: 2px;
-					width: 300px;
 					@media (min-width: 1024px) {
 						width: 100px;
 					}
 					border: 2px #6DC02E solid;
 					border-radius: 3px;
 					margin-top: 50px;
+					width: 50%;
+					margin: 50px  auto 0 auto;
 					.line_logo{
-						width: 80px;
-						height: 80px;
-						@media (min-width: 1024px) {
-							width: 30px;
-							height: 30px;
-
-						}
+						width: 30px;
+						height: 30px;
 
 					}
 					>p{
@@ -356,7 +355,10 @@ body{
 	.footer{
 		margin: 0 auto;
 		text-align: center;
-		margin: 150px 0 20px 0;
+		margin: 80px 0 20px 0;
+		@media (min-width: 1024px) {
+			margin: 150px 0 20px 0;
+		}
 
 	}
 }
