--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,6 +1,3 @@
-html {
-  font-size: 15px; }
-
 body {
   -webkit-font-smoothing: antialiased;
   font-family: 'Noto Sans JP', sans-serif;
@@ -10,16 +7,76 @@ body {
   padding: 0;
   margin: 0; }
 
-p, li {
-  font-size: 1.2rem; }
+p {
+  font-size: 40px; }
+  @media (min-width: 1024px) {
+    p {
+      font-size: 20px; } }
+
+li {
+  font-size: 30px;
+  line-height: 70px; }
+  @media (min-width: 1024px) {
+    li {
+      font-size: 14px;
+      line-height: 35px; } }
+
+h1 {
+  font-size: 80px;
+  font-weight: 300; }
+  @media (min-width: 1024px) {
+    h1 {
+      font-size: 40px; } }
+
+h2 {
+  font-size: 50px; }
+  @media (min-width: 1024px) {
+    h2 {
+      font-size: 25px; } }
+  h2 .japaneseTitle {
+    font-size: 40px; }
+    @media (min-width: 1024px) {
+      h2 .japaneseTitle {
+        font-size: 20px; } }
+
+.line_btn {
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+  color: #6DC02E;
+  background-color: white;
+  margin-top: 10px;
+  position: relative;
+  border-radius: 2px;
+  border: 2px #6DC02E solid;
+  border-radius: 3px;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  width: 100%; }
+  .line_btn .line_logo {
+    width: 60px;
+    height: 60px;
+    margin-right: 40px; }
+    @media (min-width: 1024px) {
+      .line_btn .line_logo {
+        width: 30px;
+        height: 30px;
+        margin-bottom: 0; } }
+  .line_btn > p {
+    font-weight: 400; }
 
 .subtitle {
   color: #4c4c4c; }
 
 .small_font {
-  font-size: 0.8rem;
+  font-size: 25px;
   vertical-align: super;
   color: #AC2424; }
+  @media (min-width: 1024px) {
+    .small_font {
+      font-size: 13px; } }
 
 .has-line {
   border-bottom: 1px dashed #d3d3d3; }
@@ -96,10 +153,8 @@ p, li {
     width: 100%;
     object-fit: cover; }
   .l-frame .big_title {
-    font-size: 3.4rem;
     margin-top: 100px;
     margin-bottom: 70px;
-    font-weight: 100;
     color: #4c4c4c; }
     .l-frame .big_title.green {
       color: #87AD2F; }
@@ -137,10 +192,6 @@ p, li {
           margin-bottom: 0px; } }
       .l-frame .price_cont .service p .small-mobile {
         font-size: 0.8rem; }
-      .l-frame .price_cont .service h2 {
-        font-size: 1.4rem; }
-        .l-frame .price_cont .service h2 .japaneseTitle {
-          font-size: 1.2rem; }
     .l-frame .price_cont .obs {
       width: 100%;
       background-color: #f3f3f3;
@@ -152,14 +203,12 @@ p, li {
           width: 40%;
           margin-top: 0; } }
       .l-frame .price_cont .obs ul {
-        padding: 0;
-        font-size: 0.9rem; }
+        padding: 0; }
         .l-frame .price_cont .obs ul li {
           margin-bottom: 10px;
           list-style-type: none;
           color: black;
-          margin-bottom: 30px;
-          line-height: 1.5rem; }
+          margin-bottom: 30px; }
           .l-frame .price_cont .obs ul li:last-child {
             margin-bottom: 0; }
           .l-frame .price_cont .obs ul li .is-red {
@@ -171,15 +220,20 @@ p, li {
     .l-frame #access .address_cont .title {
       font-size: 1.4rem;
       color: #4c4c4c; }
+    .l-frame #access .address_cont .telephone {
+      text-decoration: none; }
     .l-frame #access .address_cont .middle_font {
-      font-size: 0.8rem;
-      font-weight: 400; }
+      font-size: 30px; }
+      @media (min-width: 1024px) {
+        .l-frame #access .address_cont .middle_font {
+          font-size: 15px; } }
     @media (min-width: 1024px) {
       .l-frame #access .address_cont {
         flex-direction: row;
         width: 100%;
         justify-content: center; }
         .l-frame #access .address_cont .address {
+          width: 26%;
           margin: 0;
           line-height: 29px;
           font-weight: 300; } }
@@ -192,7 +246,7 @@ p, li {
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .iframe {
           width: 30%;
-          height: 300px; } }
+          height: 380px; } }
   .l-frame #schedule {
     padding: 0; }
     @media (min-width: 1024px) {
@@ -212,16 +266,14 @@ p, li {
       margin: 0 auto; }
       @media (min-width: 1024px) {
         .l-frame #aboutme .aboutme_cont .profile_pic {
-          width: 29%;
+          width: 35%;
           margin: 0; } }
     .l-frame #aboutme .aboutme_cont .infos {
       margin: 0 auto;
       width: 80%; }
-      @media (min-width: 1024px) {
-        .l-frame #aboutme .aboutme_cont .infos {
-          margin-left: 90px; } }
       .l-frame #aboutme .aboutme_cont .infos > p {
-        line-height: 33px;
+        line-height: 100px;
+        font-weight: 300;
         width: 90%; }
         @media (min-width: 1024px) {
           .l-frame #aboutme .aboutme_cont .infos > p {
@@ -232,31 +284,6 @@ p, li {
       .l-frame #aboutme .aboutme_cont .infos .info {
         display: flex;
         flex-direction: row; }
-      .l-frame #aboutme .aboutme_cont .infos .line_btn {
-        display: flex;
-        flex-direction: row;
-        text-decoration: none;
-        justify-content: space-around;
-        align-items: center;
-        color: #6DC02E;
-        padding: 0 30px;
-        background-color: white;
-        margin-top: 10px;
-        position: relative;
-        border-radius: 2px;
-        border: 2px #6DC02E solid;
-        border-radius: 3px;
-        margin-top: 50px;
-        width: 50%;
-        margin: 50px  auto 0 auto; }
-        @media (min-width: 1024px) {
-          .l-frame #aboutme .aboutme_cont .infos .line_btn {
-            width: 100px; } }
-        .l-frame #aboutme .aboutme_cont .infos .line_btn .line_logo {
-          width: 30px;
-          height: 30px; }
-        .l-frame #aboutme .aboutme_cont .infos .line_btn > p {
-          font-weight: 600; }
   .l-frame #instagram {
     width: 100%;
     margin: 0 auto; }
@@ -264,9 +291,13 @@ p, li {
       .l-frame #instagram {
         width: 90%; } }
   .l-frame .footer {
+    font-size: 30px;
     margin: 0 auto;
     text-align: center;
     margin: 80px 0 20px 0; }
+    @media (min-width: 1024px) {
+      .l-frame .footer {
+        font-size: 15px; } }
     @media (min-width: 1024px) {
       .l-frame .footer {
         margin: 150px 0 20px 0; } }
