--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -53,7 +53,7 @@ h2 {
   border: 2px #6DC02E solid;
   border-radius: 3px;
   margin-top: 50px;
-  margin-bottom: 30px;
+  margin-bottom: 80px;
   width: 100%; }
   .line_btn .line_logo {
     width: 60px;
@@ -221,12 +221,19 @@ h2 {
       font-size: 1.4rem;
       color: #4c4c4c; }
     .l-frame #access .address_cont .telephone {
-      text-decoration: none; }
+      text-decoration: none;
+      color: #4c4c4c;
+      font-size: 40px; }
+      @media (min-width: 1024px) {
+        .l-frame #access .address_cont .telephone {
+          font-size: 20px; } }
     .l-frame #access .address_cont .middle_font {
       font-size: 30px; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .middle_font {
           font-size: 15px; } }
+    .l-frame #access .address_cont .address {
+      width: 100%; }
     @media (min-width: 1024px) {
       .l-frame #access .address_cont {
         flex-direction: row;
