update and deploy

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -14,10 +14,11 @@ p{
 	}
 }
 li{
-	font-size: 30px;
+	font-size: 21px;
 	line-height: 70px;
+	font-weight: 400;
 	@media (min-width: 1024px) {
-		font-size: 14px;
+		font-size: 16px;
 		line-height: 35px;
 	}
 }
@@ -124,9 +125,6 @@ h2{
     margin: 0 auto;
     box-sizing: content-box;
     background: #fff;
-		@media (min-width: 1024px) {
-			padding: 0 16px;
-		}
     overflow: hidden;
 		position: relative;
 	.header{
@@ -178,6 +176,7 @@ h2{
 	.full_image{
 		width: 100%;
 		object-fit: cover;
+		height: 900px;
 	}
 
 	.big_title{
@@ -252,7 +251,7 @@ h2{
 			}
 
 			ul{
-				padding: 0;
+				padding: 40px;
 
 				li{
 					margin-bottom: 10px;
@@ -344,11 +343,16 @@ h2{
 			// justify-content: center;
 			align-items: flex-start;
 			.profile_pic{
-				width: 90%;
+				width: 500px;
+				height: 500px;
 				margin: 0 auto;
+				border-radius: 580px;
+				object-fit: cover;
+
 				@media (min-width: 1024px) {
 					width: 35%;
 					margin: 0;
+					border-radius: 10px;
 				}
 			}
 
@@ -359,9 +363,9 @@ h2{
 				> p{
 					line-height: 100px;
 			    font-weight: 300;
-					width: 90%;
 
 					@media (min-width: 1024px) {
+						width: 90%;
     				line-height: 39.8px;
 					}
 				}
