--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -14,11 +14,12 @@ p {
       font-size: 20px; } }
 
 li {
-  font-size: 30px;
-  line-height: 70px; }
+  font-size: 21px;
+  line-height: 70px;
+  font-weight: 400; }
   @media (min-width: 1024px) {
     li {
-      font-size: 14px;
+      font-size: 16px;
       line-height: 35px; } }
 
 h1 {
@@ -111,9 +112,6 @@ h2 {
   background: #fff;
   overflow: hidden;
   position: relative; }
-  @media (min-width: 1024px) {
-    .l-frame {
-      padding: 0 16px; } }
   .l-frame .header {
     left: auto;
     -webkit-box-pack: justify;
@@ -151,7 +149,8 @@ h2 {
               color: black; } }
   .l-frame .full_image {
     width: 100%;
-    object-fit: cover; }
+    object-fit: cover;
+    height: 900px; }
   .l-frame .big_title {
     margin-top: 100px;
     margin-bottom: 70px;
@@ -203,7 +202,7 @@ h2 {
           width: 40%;
           margin-top: 0; } }
       .l-frame .price_cont .obs ul {
-        padding: 0; }
+        padding: 40px; }
         .l-frame .price_cont .obs ul li {
           margin-bottom: 10px;
           list-style-type: none;
@@ -269,21 +268,25 @@ h2 {
         flex-direction: row;
         margin-left: 3vw; } }
     .l-frame #aboutme .aboutme_cont .profile_pic {
-      width: 90%;
-      margin: 0 auto; }
+      width: 500px;
+      height: 500px;
+      margin: 0 auto;
+      border-radius: 580px;
+      object-fit: cover; }
       @media (min-width: 1024px) {
         .l-frame #aboutme .aboutme_cont .profile_pic {
           width: 35%;
-          margin: 0; } }
+          margin: 0;
+          border-radius: 10px; } }
     .l-frame #aboutme .aboutme_cont .infos {
       margin: 0 auto;
       width: 80%; }
       .l-frame #aboutme .aboutme_cont .infos > p {
         line-height: 100px;
-        font-weight: 300;
-        width: 90%; }
+        font-weight: 300; }
         @media (min-width: 1024px) {
           .l-frame #aboutme .aboutme_cont .infos > p {
+            width: 90%;
             line-height: 39.8px; } }
       @media (min-width: 1024px) {
         .l-frame #aboutme .aboutme_cont .infos {
