--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,7 +1,7 @@
 body {
   -webkit-font-smoothing: antialiased;
   font-family: 'Noto Sans JP', sans-serif;
-  background: #d8d8d8;
+  background: #F3EBE2;
   font-weight: 400;
   height: 100%;
   padding: 0;
@@ -14,7 +14,7 @@ p {
       font-size: 20px; } }
 
 li {
-  font-size: 21px;
+  font-size: 30px;
   line-height: 70px;
   font-weight: 400; }
   @media (min-width: 1024px) {
@@ -24,7 +24,7 @@ li {
 
 h1 {
   font-size: 80px;
-  font-weight: 300; }
+  font-weight: 400; }
   @media (min-width: 1024px) {
     h1 {
       font-size: 40px; } }
@@ -51,22 +51,35 @@ h2 {
   margin-top: 10px;
   position: relative;
   border-radius: 2px;
-  border: 2px #6DC02E solid;
+  border: 2px #00b900 solid;
+  background-color: #00b900;
   border-radius: 3px;
-  margin-top: 50px;
-  margin-bottom: 80px;
-  width: 100%; }
+  margin-top: 68px;
+  width: 100%;
+  border-radius: 10px; }
+  @media (min-width: 1024px) {
+    .line_btn {
+      border-radius: 5px;
+      width: 320px; } }
   .line_btn .line_logo {
-    width: 60px;
-    height: 60px;
+    width: 90px;
+    height: 90px;
     margin-right: 40px; }
     @media (min-width: 1024px) {
       .line_btn .line_logo {
-        width: 30px;
-        height: 30px;
-        margin-bottom: 0; } }
-  .line_btn > p {
-    font-weight: 400; }
+        width: 50px;
+        height: 50px;
+        margin-bottom: 0;
+        margin-right: 20px; } }
+  .line_btn .line_btn_txt {
+    font-weight: 600;
+    color: white;
+    letter-spacing: 5px;
+    font-family: sans-serif;
+    font-size: 32px; }
+    @media (min-width: 1024px) {
+      .line_btn .line_btn_txt {
+        font-size: 15px; } }
 
 .subtitle {
   color: #4c4c4c; }
@@ -152,9 +165,12 @@ h2 {
     object-fit: cover;
     height: 900px; }
   .l-frame .big_title {
-    margin-top: 100px;
+    margin-top: 160px;
     margin-bottom: 70px;
     color: #4c4c4c; }
+    @media (min-width: 1024px) {
+      .l-frame .big_title {
+        margin-top: 100px; } }
     .l-frame .big_title.green {
       color: #87AD2F; }
     .l-frame .big_title.blue {
@@ -215,13 +231,18 @@ h2 {
   .l-frame #access .address_cont {
     align-items: flex-start;
     flex-direction: column;
-    width: 100%; }
+    flex-direction: column-reverse; }
+    @media (min-width: 1024px) {
+      .l-frame #access .address_cont {
+        flex-direction: row;
+        width: 100%;
+        justify-content: center; } }
     .l-frame #access .address_cont .title {
       font-size: 1.4rem;
       color: #4c4c4c; }
     .l-frame #access .address_cont .telephone {
       text-decoration: none;
-      color: #4c4c4c;
+      color: #9F456F;
       font-size: 40px; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .telephone {
@@ -232,27 +253,24 @@ h2 {
         .l-frame #access .address_cont .middle_font {
           font-size: 15px; } }
     .l-frame #access .address_cont .address {
-      width: 100%; }
-    @media (min-width: 1024px) {
-      .l-frame #access .address_cont {
-        flex-direction: row;
-        width: 100%;
-        justify-content: center; }
+      margin: 0 auto;
+      width: 80%; }
+      @media (min-width: 1024px) {
         .l-frame #access .address_cont .address {
           width: 26%;
           margin: 0;
           line-height: 29px;
-          font-weight: 300; } }
-    @media (min-width: 1024px) and (min-width: 1024px) {
-      .l-frame #access .address_cont .address {
-        margin-right: 80px; } }
-    .l-frame #access .address_cont .iframe {
-      width: 100%;
-      height: 500px; }
+          font-weight: 300;
+          margin-right: 80px; } }
+    .l-frame #access .address_cont .map {
+      width: 100vw;
+      height: 1000px;
+      margin: 0 0 50px 0; }
       @media (min-width: 1024px) {
-        .l-frame #access .address_cont .iframe {
+        .l-frame #access .address_cont .map {
           width: 30%;
-          height: 380px; } }
+          height: 356px;
+          margin: 21px 0 0 0; } }
   .l-frame #schedule {
     padding: 0; }
     @media (min-width: 1024px) {
@@ -280,17 +298,21 @@ h2 {
           border-radius: 10px; } }
     .l-frame #aboutme .aboutme_cont .infos {
       margin: 0 auto;
-      width: 80%; }
+      width: 80%;
+      margin-top: 50px; }
+      @media (min-width: 1024px) {
+        .l-frame #aboutme .aboutme_cont .infos {
+          width: 50%;
+          margin-top: 0; } }
       .l-frame #aboutme .aboutme_cont .infos > p {
-        line-height: 100px;
+        margin-top: 60px;
+        line-height: 80px;
         font-weight: 300; }
         @media (min-width: 1024px) {
           .l-frame #aboutme .aboutme_cont .infos > p {
+            margin: 0;
             width: 90%;
             line-height: 39.8px; } }
-      @media (min-width: 1024px) {
-        .l-frame #aboutme .aboutme_cont .infos {
-          width: 50%; } }
       .l-frame #aboutme .aboutme_cont .infos .info {
         display: flex;
         flex-direction: row; }
