--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,7 +1,7 @@
 body{
 	-webkit-font-smoothing: antialiased;
 	font-family: 'Noto Sans JP', sans-serif;
-  background: #d8d8d8;
+  background: #F3EBE2;
 	font-weight:400;
 	height: 100%;
   padding: 0;
@@ -14,7 +14,7 @@ p{
 	}
 }
 li{
-	font-size: 21px;
+	font-size: 30px;
 	line-height: 70px;
 	font-weight: 400;
 	@media (min-width: 1024px) {
@@ -28,7 +28,7 @@ h1{
 	@media (min-width: 1024px) {
 		font-size: 40px;
 	}
-	font-weight: 300;
+	font-weight: 400;
 }
 
 h2{
@@ -54,23 +54,36 @@ h2{
 	margin-top: 10px;
 	position: relative;
 	border-radius: 2px;
-	border: 2px #6DC02E solid;
+	border: 2px #00b900 solid;
+	background-color: #00b900;
 	border-radius: 3px;
-	margin-top: 50px;
-	margin-bottom: 80px;
+	margin-top: 68px;
 	width: 100%;
+	border-radius: 10px;
+	@media (min-width: 1024px) {
+		border-radius: 5px;
+		width: 320px;
+	}
 	.line_logo{
-		width: 60px;
-		height: 60px;
+		width: 90px;
+		height: 90px;
 		margin-right: 40px;
 		@media (min-width: 1024px) {
-			width: 30px;
-			height: 30px;
+			width: 50px;
+			height: 50px;
 			margin-bottom: 0;
+			margin-right: 20px;
 		}
 	}
-	>p{
-		font-weight: 400;
+	.line_btn_txt{
+		font-weight: 600;
+		color:white;
+    letter-spacing: 5px;
+		font-family: sans-serif;
+		font-size: 32px;
+		@media (min-width: 1024px) {
+			font-size: 15px;
+		}
 	}
 }
 
@@ -180,9 +193,12 @@ h2{
 	}
 
 	.big_title{
-		margin-top: 100px;
+		margin-top: 160px;
 		margin-bottom: 70px;
 		color: #4c4c4c;
+		@media (min-width: 1024px) {
+			margin-top: 100px;
+		}
 		&.green{
 			color: #87AD2F;
 		}
@@ -273,14 +289,20 @@ h2{
 		.address_cont{
 			align-items: flex-start;
 			flex-direction: column;
-			width: 100%;
+			flex-direction: column-reverse;
+			@media (min-width: 1024px) {
+				flex-direction: row;
+				width: 100%;
+				justify-content: center;
+			}
+
 			.title{
 				font-size: 1.4rem;
 				color: #4c4c4c;
 			}
 			.telephone{
 				text-decoration: none;
-				color: #4c4c4c;
+				color: #9F456F;
 				font-size: 40px;
 				@media (min-width: 1024px) {
 					font-size: 20px;
@@ -293,29 +315,27 @@ h2{
 					font-size: 15px;
 				}
 			}
-			.address{width: 100%}
-
-			@media (min-width: 1024px) {
-				flex-direction: row;
-				width: 100%;
-				justify-content: center;
-				.address{
-			    width: 26%;
+			.address{
+				margin: 0 auto;
+    		width: 80%;
+				@media (min-width: 1024px) {
+					width: 26%;
 					margin: 0;
 					line-height: 29px;
 					font-weight: 300;
-					@media (min-width: 1024px) {
-						margin-right: 80px;
-					}
+					margin-right: 80px;
 				}
 			}
 
-			.iframe{
-				width: 100%;
-				height: 500px;
+
+			.map{
+				width: 100vw;
+				height: 1000px;
+				margin: 0 0 50px 0;
 				@media (min-width: 1024px) {
 					width: 30%;
-					height: 380px;
+					height: 356px;
+			    margin: 21px 0 0 0;
 				}
 
 			}
@@ -359,18 +379,22 @@ h2{
 			.infos{
 				margin: 0 auto;
 				width: 80%;
+				margin-top: 50px;
 
+				@media (min-width: 1024px) {
+					width: 50%;
+					margin-top: 0;
+				}
 				> p{
-					line-height: 100px;
+					margin-top: 60px;
+					line-height: 80px;
 			    font-weight: 300;
 
 					@media (min-width: 1024px) {
+						margin: 0;
 						width: 90%;
     				line-height: 39.8px;
 					}
-				}
-				@media (min-width: 1024px) {
-					width: 50%;
 				}
 				.info{
 					display: flex;
