--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -46,40 +46,34 @@ h2 {
   text-decoration: none;
   justify-content: center;
   align-items: center;
-  color: #6DC02E;
   background-color: white;
   margin-top: 10px;
   position: relative;
   border-radius: 2px;
   border: 2px #00b900 solid;
-  background-color: #00b900;
   border-radius: 3px;
   margin-top: 68px;
   width: 100%;
-  border-radius: 10px; }
+  border-radius: 10px;
+  transition: all 0.2s ease; }
   @media (min-width: 1024px) {
     .line_btn {
       border-radius: 5px;
-      width: 320px; } }
-  .line_btn .line_logo {
-    width: 90px;
-    height: 90px;
-    margin-right: 40px; }
-    @media (min-width: 1024px) {
-      .line_btn .line_logo {
-        width: 50px;
-        height: 50px;
-        margin-bottom: 0;
-        margin-right: 20px; } }
+      width: 220px; } }
   .line_btn .line_btn_txt {
-    font-weight: 600;
-    color: white;
-    letter-spacing: 5px;
+    font-weight: 500;
+    color: #6DC02E;
+    letter-spacing: 2px;
     font-family: sans-serif;
-    font-size: 32px; }
+    font-size: 32px;
+    transition: all 0.2s ease; }
     @media (min-width: 1024px) {
       .line_btn .line_btn_txt {
-        font-size: 15px; } }
+        font-size: 17px; } }
+  .line_btn:hover {
+    background-color: #6DC02E; }
+    .line_btn:hover .line_btn_txt {
+      color: #fff; }
 
 .subtitle {
   color: #4c4c4c; }
@@ -161,24 +155,18 @@ h2 {
             .l-frame .header .menu_item a:hover {
               color: black; } }
   .l-frame .full_image {
-    width: 100%;
     object-fit: cover;
     height: 900px; }
   .l-frame .big_title {
     margin-top: 160px;
     margin-bottom: 70px;
-    color: #4c4c4c; }
+    color: #4c4c4c;
+    text-align: center;
+    color: #E061B0;
+    text-transform: uppercase; }
     @media (min-width: 1024px) {
       .l-frame .big_title {
         margin-top: 100px; } }
-    .l-frame .big_title.green {
-      color: #87AD2F; }
-    .l-frame .big_title.blue {
-      color: #29356A; }
-    .l-frame .big_title.pink {
-      color: #9F456F; }
-    .l-frame .big_title.red {
-      color: #AC2424; }
   .l-frame #price, .l-frame #access {
     width: 85%;
     margin: 0 auto; }
@@ -243,12 +231,15 @@ h2 {
     .l-frame #access .address_cont .telephone {
       text-decoration: none;
       color: #9F456F;
-      font-size: 40px; }
+      font-size: 40px;
+      margin-top: 39px;
+      display: block; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .telephone {
           font-size: 20px; } }
     .l-frame #access .address_cont .middle_font {
-      font-size: 30px; }
+      font-size: 30px;
+      margin: 0; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .middle_font {
           font-size: 15px; } }
@@ -262,6 +253,16 @@ h2 {
           line-height: 29px;
           font-weight: 300;
           margin-right: 80px; } }
+    .l-frame #access .address_cont .subway_logo {
+      width: 46px;
+      margin-right: 30px; }
+      @media (min-width: 1024px) {
+        .l-frame #access .address_cont .subway_logo {
+          width: 26px;
+          padding-top: 12px;
+          margin-right: 15px; } }
+      .l-frame #access .address_cont .subway_logo img {
+        width: 100%; }
     .l-frame #access .address_cont .map {
       width: 100vw;
       height: 1000px;
@@ -322,6 +323,17 @@ h2 {
     @media (min-width: 1024px) {
       .l-frame #instagram {
         width: 90%; } }
+    .l-frame #instagram .instagram_txt {
+      font-weight: 300;
+      font-size: 30px;
+      margin-top: 50px;
+      display: block;
+      margin-left: 40px; }
+      @media (min-width: 1024px) {
+        .l-frame #instagram .instagram_txt {
+          font-size: 15px;
+          margin-top: 20px;
+          margin-left: 0; } }
   .l-frame .footer {
     font-size: 30px;
     margin: 0 auto;
