--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,7 +1,7 @@
 body {
   -webkit-font-smoothing: antialiased;
   font-family: 'Noto Sans JP', sans-serif;
-  background: #F3EBE2;
+  background: #d8d8d8;
   font-weight: 400;
   height: 100%;
   padding: 0;
