--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -44,34 +44,41 @@ h2 {
   display: flex;
   flex-direction: row;
   text-decoration: none;
-  justify-content: center;
   align-items: center;
   background-color: white;
   margin-top: 10px;
   position: relative;
   border-radius: 2px;
-  border: 2px #00b900 solid;
   border-radius: 3px;
   margin-top: 68px;
-  width: 100%;
-  border-radius: 10px;
+  width: 500px;
+  border-radius: 15px;
+  background-color: #00c300;
   transition: all 0.2s ease; }
   @media (min-width: 1024px) {
     .line_btn {
-      border-radius: 5px;
-      width: 220px; } }
+      border-radius: 10px;
+      width: 259px; } }
+  .line_btn .line_logo {
+    height: 80px;
+    margin-left: 10px; }
+    @media (min-width: 1024px) {
+      .line_btn .line_logo {
+        height: 50px;
+        margin-left: 10px; } }
   .line_btn .line_btn_txt {
-    font-weight: 500;
-    color: #6DC02E;
+    font-weight: bold;
+    color: #fff;
     letter-spacing: 2px;
-    font-family: sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: 40px;
-    transition: all 0.2s ease; }
+    transition: all 0.2s ease;
+    margin: 0 auto; }
     @media (min-width: 1024px) {
       .line_btn .line_btn_txt {
         font-size: 17px; } }
   .line_btn:hover {
-    background-color: #6DC02E; }
+    background-color: #00e000; }
     .line_btn:hover .line_btn_txt {
       color: #fff; }
 
@@ -244,6 +251,7 @@ h2 {
         .l-frame #access .address_cont .middle_font {
           font-size: 15px; } }
     .l-frame #access .address_cont .address {
+      height: 390px;
       margin: 0 auto;
       width: 80%; }
       @media (min-width: 1024px) {
@@ -270,7 +278,7 @@ h2 {
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .map {
           width: 30%;
-          height: 387px;
+          height: 380px;
           margin: 21px 0 0 0; } }
   .l-frame #schedule {
     padding: 0; }
