--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -316,7 +316,8 @@ h2 {
         margin: 0 auto; } }
     .l-frame #schedule .calendar_iframe {
       border-width: 0;
-      width: 100%; }
+      width: 100%;
+      height: 1100px; }
   .l-frame #aboutme .aboutme_cont {
     display: flex;
     flex-direction: column;
