--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -201,7 +201,9 @@ h2 {
     text-transform: uppercase; }
     @media (min-width: 1024px) {
       .l-frame .big_title {
-        margin-top: 100px; } }
+        margin-top: 100px; }
+        .l-frame .big_title.small {
+          margin-bottom: 40px; } }
   .l-frame #price, .l-frame #access {
     width: 85%;
     margin: 0 auto; }
