--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -238,6 +238,9 @@ h2{
 		text-transform: uppercase;
 		@media (min-width: 1024px) {
 			margin-top: 100px;
+			&.small{
+				margin-bottom: 40px;
+			}
 		}
 
 	}
@@ -394,6 +397,7 @@ h2{
 			width: 90%;
     		margin: 0 auto;
 		}
+
 		.calendar_txt{
 			margin-left: 40px;
 			line-height: 70px;
